# my-rustbook

./: .gitignore  README.md
bitonic-sorter/: Cargo.toml
bitonic-sorter/examples/: benchmark.rs
bitonic-sorter/src/: first.rs  fourth.rs  second.rs  third.rs
hello/: Cargo.toml
hello/src/: main.rs
log-collector/: docker-compose.yml
log-collector/api/: Cargo.toml
log-collector/api/src/: lib.rs
log-collector/cli/: Cargo.toml
log-collector/cli/src/: main.rs
log-collector/server/: Cargo.toml
log-collector/server/src/: db.rs  handlers.rs  main.rs  model.rs
ownership/: Cargo.toml
ownership/src/: main.rs  toy_vec.rs
parser/: Cargo.toml
parser/src/: main.rs
rpn/: Cargo.toml
rpn/src/: main.rs
start-aw/: Cargo.toml
start-aw/src/: main.rs
start-aw/templates/: index.html.tera
wordcount/: Cargo.toml
wordcount/src/: lib.rs  main.rs
wordcount/tests/: char.rs
wordcount/tests/utils/: mod.rs
